# TFEA-lite

./: CITATION.cff  LICENSE  README.md  pyproject.toml
examples/: approximated_vs_actual_orthogonalization.py  ex_Quad4n_plane_stress.py  ex_Tetr4n_I_beam.py  ex_Tri3n_plane_stress.py  ex_XQuad4n_plane_stress.py  ex_XTri3n_plane_stress.py  ex_plane_stress.py
src/tfealite/: FEModel.py  XFEModel.py  __init__.py
src/tfealite/core/: assembly.py  bc.py  dofs.py  level_set.py  load.py  model.py  quadratures.py  sif.py  solver.py  stress.py
src/tfealite/elements/: Quad4n.py  Tetr4n.py  Tri3n.py  XQuad4n.py  XTri3n.py  utils.py
src/tfealite/visualization/: build_mesh.py  visualization.py
tests/: Tri3n_test.py  XFEModel_test.py  XQuad4n_test.py  XTri3n_test.py  level_set_test.py  visualization_test.py
