[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tfealite"
version = "0.1.0"
description = "A lightweight public subset of the TFEA (Toolbox for Finite Element Analysis)"
authors = [
    { name = "Songhan Zhang" }
]
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "scipy",
    "pyvista",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["tfealite*"]